; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_pmap_tte_deallocate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_pmap_tte_deallocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ARM_TTE_TYPE_MASK = common dso_local global i32 0, align 4
@ARM_TTE_TYPE_TABLE = common dso_local global i32 0, align 4
@ARM_PGMASK = common dso_local global i32 0, align 4
@ARM_PGBYTES = common dso_local global i32 0, align 4
@ARM_PTE_TYPE_FAULT = common dso_local global i32 0, align 4
@ARM_PTE_TYPE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32*, i32)* @pmap_tte_deallocate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pmap_tte_deallocate(i64 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @PMAP_ASSERT_LOCKED(i64 %9)
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %8, align 4
  %13 = load i64, i64* %4, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @pmap_tte_remove(i64 %13, i32* %14, i32 %15)
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* @ARM_TTE_TYPE_MASK, align 4
  %19 = and i32 %17, %18
  %20 = load i32, i32* @ARM_TTE_TYPE_TABLE, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %39

22:                                               ; preds = %3
  %23 = load i64, i64* %4, align 8
  %24 = call i32 @PMAP_UNLOCK(i64 %23)
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @tte_to_pa(i32 %25)
  %27 = load i32, i32* @ARM_PGMASK, align 4
  %28 = xor i32 %27, -1
  %29 = and i32 %26, %28
  store i32 %29, i32* %7, align 4
  %30 = load i64, i64* %4, align 8
  %31 = load i32, i32* %7, align 4
  %32 = call i64 @phystokv(i32 %31)
  %33 = inttoptr i64 %32 to i32*
  %34 = load i32, i32* %6, align 4
  %35 = add i32 %34, 1
  %36 = call i32 @pmap_tt_deallocate(i64 %30, i32* %33, i32 %35)
  %37 = load i64, i64* %4, align 8
  %38 = call i32 @PMAP_LOCK(i64 %37)
  br label %39

39:                                               ; preds = %22, %3
  ret void
}

declare dso_local i32 @PMAP_ASSERT_LOCKED(i64) #1

declare dso_local i32 @pmap_tte_remove(i64, i32*, i32) #1

declare dso_local i32 @PMAP_UNLOCK(i64) #1

declare dso_local i32 @tte_to_pa(i32) #1

declare dso_local i32 @pmap_tt_deallocate(i64, i32*, i32) #1

declare dso_local i64 @phystokv(i32) #1

declare dso_local i32 @PMAP_LOCK(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
